--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class="content new_level">
-  <div class="content_header clearfix">
+  <div class="content_header">
     <div class="content_title">ABOUT US</div>
   </div>
   I don't know what Campus Smack is yet, so stop asking....
