--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,5 +1,5 @@
 <div class="content new_level">
-<div class="content_header clearfix">
+<div class="content_header">
   <div class="content_title">AppLyte Inc. Privacy Policy</div>
 </div>
 <div class="content_container">
