--- a/app/views/support/new.html.erb
+++ b/app/views/support/new.html.erb
@@ -1,5 +1,5 @@
 <div class="content">
-  <div class="content_header clearfix">
+  <div class="content_header">
     <div class="content_title">Contact</div>
     <div class="content_subtitle">GIVE US YOUR FEEDBACK!</div>
   </div>
