--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,5 +1,5 @@
 <div class="content new_level">
-  <div class="content_header clearfix">
+  <div class="content_header">
     <div class="content_title">HELP</div>
   </div>
 I can't help you, try therapy....
