--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,7 +79,7 @@
 </div>
 <div class="footer ">
   <div class="footer_content">
-    <span class="copyright">2011 Campusmack All rights reserved  <a href="/terms">Terms</a> | <a href="/privacy">Privacy</a></span>
+    <span class="copyright">&copy; 2011 Campusmack <a href="/terms">Terms</a> | <a href="/privacy">Privacy</a></span>
     <img src="/images/tw_ducks.png" class="ducks" alt=""/>
     <a href="#" class="footer_link">Follow us on Twitter</a>
   </div>
