--- a/app/views/user_mailer/share_post.html.erb
+++ b/app/views/user_mailer/share_post.html.erb
@@ -43,7 +43,7 @@
                 <% if @post.photo %>
                   <tr>
                     <td align="center">
-                      <img style="padding: 20px;" src="<%= @post.photo(:large) %>" alt=""/>
+                      <img style="padding: 20px;" src="<%= @post.photo(:large).url %>" alt=""/>
                     </td>
                   </tr>
                 <% end %>
@@ -77,7 +77,7 @@
                     <p style="font-family: Arial, sans-serif; font-size: 12px; line-height: 18px; margin: 0 0 20px">Are
                       you going to take that?</p>
 
-                    <p><%= link_to @smacker.to_s, college_smacks_path(@smacker.college) %> Back!</a></p>
+                    <p><%= link_to @smacker.to_s, college_smacks_url(@smacker.college) %> Back!</a></p>
                   </td>
                 </tr>
               </table>
