--- a/app/views/user_mailer/share_post.html.erb
+++ b/app/views/user_mailer/share_post.html.erb
@@ -37,7 +37,7 @@
               <table width="525" cellspacing="0" cellpadding="0" border="0">
                 <tr>
                   <td>
-                    <h1 style="font-family: Arial, sans-serif; font-size: 24px; font-weight: normal; margin: 0 0 20px"><%= @post.title %></h1>
+                    <h1 style="font-family: Arial, sans-serif; font-size: 24px; font-weight: normal; margin: 0 0 20px"><%= link_to(@post.title, polymorphic_url([@post.postable, @post]) %></h1>
                   </td>
                 </tr>
                 <% if @post.photo %>
@@ -52,8 +52,6 @@
                     <% if  @post.video %>
                       <p><%= link_to @post.video.url, @post.video.url, :style => "font-family: Arial, sans-serif; color: #028cf0; font-size: 12px; font-weight: bold;" %></p>
                     <% end %>
-                    <p><%= link_to(@post.title, polymorphic_url([@post.postable, @post]), :style => "font-family: Arial, sans-serif; color: #028cf0; font-size: 12px; font-weight: bold;") %></p>
-
                     <p style="font-family: Arial, sans-serif; font-size: 12px; line-height: 14px; margin: 0 0 20px"><%= @post.summary %></p>
                   </td>
                 </tr>
@@ -77,7 +75,7 @@
                     <p style="font-family: Arial, sans-serif; font-size: 12px; line-height: 18px; margin: 0 0 20px">Are
                       you going to take that?</p>
 
-                    <p><%= link_to @smacker.to_s, college_smacks_url(@smacker.college) %> Back!</a></p>
+                    <p><%= link_to "Smack " + @smacker.first_name + " Back!", college_smacks_url(@smacker.college) %></a></p>
                   </td>
                 </tr>
               </table>
@@ -91,19 +89,7 @@
           <tr>
             <td colspan="2">
               <table bgcolor="#e0e0e0" cellpadding="10" width="100%">
-                <tr>
-                  <td align="center">
-                    <a href="#" style="font-family: Arial, sans-serif; color: #30a0f0; font-size: 10px">FOLLOW ON
-                      TWITTER</a><span style="font-family: Arial, sans-serif; font-size: 10px;">&nbsp;|&nbsp;</span><a href="#" style="color: #30a0f0; font-size: 10px">FRIEND
-                    ON FACEBOOK</a></td>
-                </tr>
-              </table>
-            </td>
-          </tr>
           <tr>
-            <td height="30" style="vertical-align: middle;">
-              <p style="font-family: Arial, sans-serif; color: #878787; font-size: 9px; margin: 0">You received this
-                email because you signed up to Campusmack.</p></td>
             <td align="right" style="vertical-align: middle;">
               <p style="font-family: Arial, sans-serif; color: #878787; font-size: 9px; margin: 0;">Copyright &#169; <%= @time.year %>
                 Campusmack</p></td>
