send as smack update

--- a/app/views/user_mailer/share_post.html.erb
+++ b/app/views/user_mailer/share_post.html.erb
@@ -37,7 +37,16 @@
               <table width="525" cellspacing="0" cellpadding="0" border="0">
                 <tr>
                   <td>
-                    <h1 style="font-family: Arial, sans-serif; font-size: 24px; font-weight: normal; margin: 0 0 20px"><%= @post.title %></h1>
+                    <p style="font-family: Arial, sans-serif; font-size: 12px; line-height: 18px; margin: 0 0 20px"><%= raw(@message.gsub(/\n/, '<br/>')) %></p>
+                  </td>
+                </tr>
+              </table>
+              <img width="10" height="20" src="<%= root_url %>images/email/spacer.gif">
+              <img width="525" height="21" src="<%= root_url %>images/email/divider.gif">
+              <table width="525" cellspacing="0" cellpadding="0" border="0">
+                <tr>
+                  <td>
+                    <h1 style="font-family: Arial, sans-serif; font-size: 24px; font-weight: normal; margin: 0 0 20px"><%= link_to @post.title, polymorphic_url([@post.postable, @post]) %></h1>
                   </td>
                 </tr>
                 <% if @post.photo %>
@@ -52,24 +61,11 @@
                     <% if  @post.video %>
                       <p><%= link_to @post.video.url, @post.video.url, :style => "font-family: Arial, sans-serif; color: #028cf0; font-size: 12px; font-weight: bold;" %></p>
                     <% end %>
-                    <p><%= link_to(@post.title, polymorphic_url([@post.postable, @post]), :style => "font-family: Arial, sans-serif; color: #028cf0; font-size: 12px; font-weight: bold;") %></p>
-
                     <p style="font-family: Arial, sans-serif; font-size: 12px; line-height: 14px; margin: 0 0 20px"><%= @post.summary %></p>
                   </td>
                 </tr>
               </table>
-              <img width="10" height="20" src="<%= root_url %>images/email/spacer.gif">
-              <img width="525" height="21" src="<%= root_url %>images/email/divider.gif">
-
-              <table width="525" cellspacing="0" cellpadding="0" border="0">
-                <tr>
-                  <td>
-                    <p style="font-family: Arial, sans-serif; font-size: 12px; line-height: 18px; margin: 0 0 20px"><%= raw(@message.gsub(/\n/, '<br/>')) %></p>
-                  </td>
-                </tr>
-              </table>
-              <img width="10" height="20" src="<%= root_url %>images/email/spacer.gif">
-              <img width="525" height="21" src="<%= root_url %>images/email/divider.gif">
+             
 
               <table width="525" cellspacing="0" cellpadding="0" border="0">
                 <tr>
@@ -101,9 +97,6 @@
             </td>
           </tr>
           <tr>
-            <td height="30" style="vertical-align: middle;">
-              <p style="font-family: Arial, sans-serif; color: #878787; font-size: 9px; margin: 0">You received this
-                email because you signed up to Campusmack.</p></td>
             <td align="right" style="vertical-align: middle;">
               <p style="font-family: Arial, sans-serif; color: #878787; font-size: 9px; margin: 0;">Copyright &#169; <%= @time.year %>
                 Campusmack</p></td>
