--- a/app/views/user_mailer/share_post.html.erb
+++ b/app/views/user_mailer/share_post.html.erb
@@ -65,8 +65,8 @@
                   </td>
                 </tr>
               </table>
-             
-
+               <img width="10" height="20" src="<%= root_url %>images/email/spacer.gif">
+		       <img width="525" height="21" src="<%= root_url %>images/email/divider.gif">
               <table width="525" cellspacing="0" cellpadding="0" border="0">
                 <tr>
                   <td>
