--- a/app/views/users/registrations/_form.html.erb
+++ b/app/views/users/registrations/_form.html.erb
@@ -26,7 +26,7 @@
       </tr>
 
       <tr>
-        <td class="description"><%= f.label :birthday, "Birthday:" %></td>
+        <td class="description"><%= f.label :birthday, "Date of Birth:" %></td>
         <td class="entry"><%= f.date_select :birthday, :start_year => 60.years.ago.year, :end_year => 14.years.ago.year %></td>
       </tr>
 
@@ -34,7 +34,7 @@
         <td class="description"><%= f.label :affiliation, "Affiliation:" %></td>
         <td class="entry">
           <span class="affiliation_span"><%= f.select(:affiliation, User::AFFILIATION_OPTIONS, { :include_blank => true }, :class => 'affilation') %></span>
-          <span>of <%= f.select(:college_id, College.find(:all, :order => "name ASC").collect { |a| [a.name, a.id] }, { :include_blank => true }, :class => 'college') %></span>
+          <span>  of  <%= f.select(:college_id, College.find(:all, :order => "name ASC").collect { |a| [a.name, a.id] }, { :include_blank => true }, :class => 'college') %></span>
         </td>
         <td class="star"><%= mark_required(resource, :affiliation) %></td>
       </tr>
