--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,8 +80,8 @@
 <div class="footer ">
   <div class="footer_content">
     <span class="copyright">&copy; 2011 Campusmack <a href="/terms">Terms</a> | <a href="/privacy">Privacy</a></span>
-    <img src="/images/tw_ducks.png" class="ducks" alt=""/>
-    <a href="#" class="footer_link">Follow us on Twitter</a>
+    <!-- <img src="/images/tw_ducks.png" class="ducks" alt=""/>
+    <a href="#" class="footer_link">Follow us on Twitter</a> -->
   </div>
 </div>
 </body>
