--- a/app/views/posts/send_as_smack.html.erb
+++ b/app/views/posts/send_as_smack.html.erb
@@ -161,7 +161,7 @@
             </tr>
             <tr>
               <td class="description va-top"><%= f.label :message, 'Message:' %></td>
-              <td class="entry"><%= f.text_area :message, :value => @message %></td>
+              <td class="entry vtop">&nbsp;<%= f.text_area :message, :value => @message %></td>
             </tr>
           </table>
           <div class="confirmation_container clearfix">
